2007-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: prevent double-delete of args in LocalDirList
	  (reported by Liu Yubao <yubao.liu@gmail.com>)
	* pgetJob.cc: fixed core dump when target directory is not writable
	  (reported by Justin Piszcz <jpiszcz@lucidpixels.com>).

2007-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: -p option has priority over the url.

2007-01-06  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h, Fish.cc, Fish.h: move shell_encode to misc.cc.
	* MirrorJob.cc: use shell_encode to quote properly file names for shell;
	  this fixes potential security vulnerability when one generates a
	  script with mirror --script and then executes it.

2006-12-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Timer.cc, Timer.h: reset timer when creating it from TimeInterval,
	  this fixes sleep command; (re_set) forced resetting; use it.

2006-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: remove obsolete note about infinite cache size.

2006-12-06  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: reset timeout_timer when waiting for transfer
	  confirmation; reset it when sending a command after some idle
	  time; (Read) fixed check for null iobuf.
	* Timer.cc: (Reset) reset only to a later time.

2006-10-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: clear and reset cp when a sub-job finishes (fixes
	  coredump in mget).

2006-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use Delete on SMTask derivative Speedometer.
	* SMTask.cc: add debug print when deleting running task.
	* FileAccess.cc: fixed coredump when path.url is null after Change.
	* CopyJob.cc: Delete done CopyJob - fix a leak.

2006-08-29  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h, MirrorJob.cc, MirrorJob.h, resource.cc:
	  new mirror option --skip-noaccess and setting mirror:skip-noaccess.
	  (FileSet::ExcludeUnaccessible) new method.
